--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -250,87 +250,86 @@
 
         <section id="itinerary" class="section">
             <h2>Your Holiday Itinerary</h2>
-            <p>Explore the best of Thailand over 10 days!</p>
+            <p>Exploreaza frumusetea Thailandei in 14 zile!</p>
             <div class="itinerary-cards">
                 <div class="itinerary-card">
-                    <h3>Day 1</h3>
-                    <p>• Relax First Day in Pattaya </p>
-                    <p>• Dinner at Nest Bird with stunning beach views </p>
-                    <p>• Energia Vibranta a Faimoasei Walking Street din Pattaya </p>
+                    <h3>Ziua 1</h3>
+                    <p>• Relaxare la Hotel </p>
+                    <p>• Cina la Nest Bird cu vedere la plaja </p>
+                    <p>• Exploreaza energia vibranta a faimosului "Walking Street" din Pattaya </p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 2</h3>
-                    <p>• Descopera Maretia Sanctuarului Adevarului </p>
-                    <p>• Exploreaza Stilul International la Terminal 21 Pattaya </p>
-                    <p>• Relaxare si Revitalizare cu Masajul Thai </p>
-                    <p>• Experience the dazzling Tiffany Show </p>
+                    <h3>Ziua 2</h3>
+                    <p>• Descopera Maretia Sanctuary of Truth </p>
+                    <p>• Exploreaza stilul international la mall Terminal 21 Pattaya </p>
+                    <p>• Relaxare si revitalizare cu ajutorul masajului Thailanezesc </p>
+                    <p>• Participa la spectacolul celebru "Tiffany Show"</p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 3</h3>
-                    <p>• Escape intr-un paradis tropical pe Koh Larn </p>
-                    <p>• Dive into adventure with exciting water sports </p>
-                    <p>• Enjoy Koh Larn beaches with clear waters and soft sand </p>
+                    <h3>Ziua 3</h3>
+                    <p>• Relaxeaza-te intr-un paradis tropical pe Koh Larn </p>
+                    <p>• Incearca sporturi nautice </p>
+                    <p>• Bucura-te de plaje cu nisip fin si ape cristaline </p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 4</h3>
-                    <p>• Arrive at Phuket City </p>
-                    <p>• Explore the colorful streets of Phuket Old Town </p>
+                    <h3>Ziua 4</h3>
+                    <p>• Sosire la Phuket </p>
+                    <p>• Exploreaza centrul vechi plin de culori </p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 5</h3>
-                    <p>• Visit the Majestic Big Buddha in Phuket, One of Phuket Most Famous Landmarks </p>
-                    <p>• Embark on an Unforgettable Elephant Trek in Phuket </p>
+                    <h3>Ziua 5</h3>
+                    <p>• Viziteaza faimoasa statuie "Big Buddha"</p>
+                    <p>• Admira prietenii giganti la sanctuarul elefantilor </p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 6</h3>
-                    <p>• Relax on Phuket’s Famous Beaches like Banana Beach, Kata Beach, and More </p>
-                    <p>• Shopping destinations, from luxury malls to local night markets </p>
+                    <h3>Ziua 6</h3>
+                    <p>• Relaxeaza-te pe plajele superbe din Phuket</p>
+                    <p>• Shopping la pietele locale sau la mallurile de lux </p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 7</h3>
-                    <p>• Explore the best of Phuket Island </p>
-                    <p>• Snorkeling in crystal-clear waters </p>
-                    <p>• Catch the sunset and a stunning fire show on the beach </p>                
+                    <h3>Ziua 7</h3>
+                    <p>• Tur cu barca in insulele vecine orasului.</p>
+                    <p>• Snorkeling in apele cristaline </p>
+                    <p>• Bucura-te de apus si de un fire show pe plaja </p>                
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 8</h3>
-                    <p>• Dive into fun at Andaman Sea Water Park </p>
-                    <p>• Experience dinner in the jungle surrounded by nature in Phuket </p>
+                    <h3>Ziua 8</h3>
+                    <p>• Distreaza-te la Andaman Sea Water Park</p>
+                    <p>• Savureaza cina in jungla inconjurat doar de natura. </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 9</h3>
-                    <p>• The Beauty of Phi Phi Island </p>
-                    <p>• Discover the breathtaking beauty of Maya Bay </p>
-                    <p>• Explore the stunning Pi Leh Lagoon </p>
-                    <p>• Snorkeling in crystal-clear waters and vibrant marine life </p>
+                    <p>• Viziteaza frumusetea oferita de insulele Phi Phi </p>
+                    <p>• Descopera uimitoarea Maya Bay</p>
+                    <p>• Admira Pi leh Lagoon</p>
+                    <p>• Bucura-te de viata marina din apele cristaline cu ajutorul snorkelingului</p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 10</h3>
-                    <p>• Cafe Phuket offers Thai cuisine, Thai-style houses, and lotus ponds </p>
-                    <p>• Enter a world of fun at Carnival Magic Phuket top theme park </p>
+                    <h3>Ziua 10</h3>
+                    <p>• Cafe Phuket ofera mancare traditionala, case autentice si o ferma de lotus </p>
+                    <p>• Distreaza-te la un parc tematic </p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 11</h3>
-                    <p>• Discover Asiatique in Bangkok for shopping, dining, and riverside views </p>                    
-                    <p>• Explore Khao San Road in Bangkok for vibrant nightlife and street food </p>
+                    <h3>Ziua 11</h3>
+                    <p>• Descopera piete si magazine locale, si savureaza cina pe malul raului </p>                    
+                    <p>• Exploreaza strazile pline de distractie ale Bangkokului </p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 12</h3>
-                    <p>• Experience the charm of Bangkok Floating Market with colorful boats </p>
-                    <p>• Visit Train Market for a unique shopping experience with passing trains </p>                   
-                    <p>• Explore Bangkok Chinatown for delicious street food </p>
+                    <h3>Ziua 12</h3>
+                    <p>• Viziteaza cea mai mare piata plutitoare din Bangkok</p>
+                    <p>• Exploreaza si incearca "Train Market"</p>                   
+                    <p>• Incearca China Town pentru un street food delicios</p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 13</h3>
-                    <p>• Bangkok stunning Temple of Dawn with breathtaking riverside views </p>
-                    <p>• Rent a traditional Thai dress and capture beautiful memories in Bangkok </p>
-                    <p>• Visit the Grand Palace with stunning architecture and rich history </p>
-                    <p>• Shop dine and explore Bangkok luxury riverside mall at ICONSIAM </p>
-                    <p>• Enjoy a scenic dinner cruise on the Chao Phraya River </p>
+                    <h3>Ziua 14</h3>
+                    <p>• Viziteaza templele Budiste uimitoare</p>
+                    <p>• Exploreaza palatul regal </p>
+                    <p>• Experimenteaza cel mai luxos mall</p>
+                    <p>• Bucura-te de o cina pe raul Chao Phraya </p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 14</h3>
-                    <p>• Step into style at Platinum Mall, Bangkok's ultimate shopping experience </p>
+                    <h3>Ziua 14</h3>
+                    <p>• Shopping la un mall cu preturi uimitoare</p>
                 </div>            
             </div>
         </section>
@@ -385,17 +384,7 @@
                 </div>
             </div>
         </section>
-        <section id="reasons" class="section">
-            <h2>Ce nu cuprinde vacanta?</h2>
-            <div class="destinations">
-                <div class="destination">
-                    <p>Bilete de avion</p>
-                </div>
-                <div class="destination">
-                    <p>Asigurare medicala</p>
-                </div>
-            </div>
-        </section>
+        
 
         <section id="customization" class="section">
             <h4>Personalizeaza-ti vacanta</h4>
@@ -410,7 +399,7 @@
 
     <footer>
         <p>© 2024 Trasia Agency. All rights reserved.</p>
-        <p>Contact: +40727300463</p>
+        
         <div class="social-media">
             <a href="https://www.facebook.com/profile.php?id=61566412341547" target="_blank" class="social-icon">
                 <img src="https://cdn.icon-icons.com/icons2/1/PNG/256/social_facebook_fb_35.png" alt="Facebook">
