--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -124,6 +124,7 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         .destinations {
+            background-color:#b3c9c9;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -342,7 +343,7 @@
                 gap: 15px;
             }
             .itinerary-card {
-                background-color: #ffffff;
+                background-color: #e0e0e0;
                 border-radius: 10px;
                 padding: 15px;
                 width: 90%;
