--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -131,7 +131,7 @@
             gap: 15px;
         }
         .destination {
-            background-color:#e0e0e0;
+            background-color:#b3c9c9;
             border-radius: 10px;
             padding: 15px;
             width: 90%;
