--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -236,7 +236,7 @@
                     <p>Sedere 3 nopti. </p>
                 </div>
                 <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2019/07/26/17/57/phuket-4365305_1280.jpg" alt="Phuket Getaway">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
                     <h3>Phuket Escape</h3>
                     <p>Sedere 5 nopti.</p>
                 </div>
