--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -226,7 +226,7 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                 <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2017/09/09/15/47/bangkok-2732437_640.jpg" alt="Bangkok Tour">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833625/istockphoto-2113145841-1024x1024_mu1xyi.jpg" alt="Bangkok Tour">
                     <h3>Bangkok Highlights</h3>
                     <p>Sedere 3 nopti. </p>
                 </div>
