--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -225,27 +225,26 @@
         <section id="offers" class="section">
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
-                <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
-                    <h3>Bangkok Highlights</h3>
-                    <p>Sedere 3 nopti. </p>
-                </div>
                  <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2023/02/18/13/39/highway-7797953_1280.jpg" alt="Bangkok Tour">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731834226/istockphoto-1154066713-1024x1024_otiogj.jpg" alt="Bangkok Tour">
                     <h3>Pattaya</h3>
-                    <p>Sedere 3 nopti. </p>
+                    <p>Sedere 3 nopti </p>
                 </div>
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
                     <h3>Phuket Escape</h3>
-                    <p>Sedere 5 nopti.</p>
+                    <p>Sedere 5 nopti </p>
                 </div>
                 <div class="destination">
                     <img src="https://images.unsplash.com/photo-1562446964-5196f34db871?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Phi Phi Islands">
-                    <h3>Phi Phi Island Adventure</h3>
-                    <p>Sedere 2 nopti</p>
+                    <h3>Phi Phi Island</h3>
+                    <p>Sedere 1 zi </p>
                 </div>
-                
+                  <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
+                    <h3>Bangkok/h3>
+                    <p>Sedere 3 nopti </p>
+                </div>                
             </div>
         </section>
 
