--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -242,7 +242,7 @@
                 </div>
                   <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
-                    <h3>Bangkok/h3>
+                    <h3>Bangkok </h3>
                     <p>Sedere 3 nopti </p>
                 </div>                
             </div>
