--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -236,7 +236,7 @@
                     <p>Sedere 5 nopti </p>
                 </div>
                 <div class="destination">
-                    <img src="https://media.istockphoto.com/id/1128965769/th/รูปถ่าย/เกาะพีพีดอน-ทิวทัศน์ที่น่าตื่นตาตื่นใจของอ่าวในทะเลอันดามันจากจุดชมวิว-ชายฝั่งสวรรค์ขอ.jpg?s=1024x1024&w=is&k=20&c=_i5E8GbU3NSnocDIlSn7tdUAPgr17ujRLs3X9uVuajs=" alt="Phi Phi Islands">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
                     <h3>Phi Phi Island</h3>
                     <p>Sedere 1 zi </p>
                 </div>
