--- a/Booking.html
+++ b/Booking.html
@@ -137,7 +137,7 @@
             border: none;
         }
         .cta-button:hover {
-            background-color: #9eeece;
+            background-color: #d9b08c;
         }
         footer {
             background:  rgba(17,100,102 , 0.8);
@@ -167,6 +167,14 @@
         .social-icon img {
             width: 30px; /* Adjust icon size */
             height: 30px; /* Adjust icon size */
+        }
+        textarea {
+            width: 96 %;
+            height: 100px; /* Set a fixed height */
+            padding: 10px;
+            border: 1px solid #e0e0e0;
+            border-radius: 5px;
+            resize: none; /* Prevent resizing */
         }
     </style>
 </head>
@@ -224,7 +232,9 @@
 
     <label for="guests">Număr de oaspeți</label>
     <input type="number" id="guests" name="guests" required>
-
+    <label for="guests">Mesaj</label>
+    <textarea id="description" name="description" placeholder="Describe what you want from the holiday"></textarea>
+    <label for="guests"></label>
     <button type="submit" class="cta-button">Trimite Rezervarea</button>
 </form>
 
