--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -249,21 +249,21 @@
         </section>
 
         <section id="itinerary" class="section">
-            <h2>Your Holiday Itinerary</h2>
-            <p>Exploreaza frumusetea Thailandei in 14 zile!</p>
+            <h2>Itinerariu</h2>
+            <p>Exploreaza Frumusetea Thailandei in 14 zile!</p>
             <div class="itinerary-cards">
                 <div class="itinerary-card">
                     <h3>Ziua 1</h3>
                     <p>• Relaxare la Hotel </p>
                     <p>• Cina la Nest Bird cu vedere la plaja </p>
-                    <p>• Exploreaza energia vibranta a faimosului "Walking Street" din Pattaya </p>
+                    <p>• Exploreaza energia vibranta a faimosului Walking Street </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 2</h3>
                     <p>• Descopera Maretia Sanctuary of Truth </p>
                     <p>• Exploreaza stilul international la mall Terminal 21 Pattaya </p>
                     <p>• Relaxare si revitalizare cu ajutorul masajului Thailanezesc </p>
-                    <p>• Participa la spectacolul celebru "Tiffany Show"</p>
+                    <p>• Participa la spectacolul celebru Tiffany Showb</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 3</h3>
@@ -278,7 +278,7 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• Viziteaza faimoasa statuie "Big Buddha"</p>
+                    <p>• Viziteaza faimoasa statuie Big Buddha </p>
                     <p>• Admira prietenii giganti la sanctuarul elefantilor </p>
                 </div>
                 <div class="itinerary-card">
@@ -317,7 +317,7 @@
                 <div class="itinerary-card">
                     <h3>Ziua 12</h3>
                     <p>• Viziteaza cea mai mare piata plutitoare din Bangkok</p>
-                    <p>• Exploreaza si incearca "Train Market"</p>                   
+                    <p>• Exploreaza si incearca Train Market </p>                   
                     <p>• Incearca China Town pentru un street food delicios</p>
                 </div>
                 <div class="itinerary-card">
