--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -263,7 +263,7 @@
                     <p>• Descopera Maretia Sanctuary of Truth </p>
                     <p>• Exploreaza stilul international la mall Terminal 21 Pattaya </p>
                     <p>• Relaxare si revitalizare cu ajutorul masajului Thailanezesc </p>
-                    <p>• Participa la spectacolul celebru Tiffany Showb</p>
+                    <p>• Participa la spectacolul celebru <b>Tiffany Show</b> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 3</h3>
