--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -256,18 +256,18 @@
                     <h3>Ziua 1</h3>
                     <p>• Relaxare la Hotel </p>
                     <p>• Cina la Nest Bird cu vedere la plaja </p>
-                    <p>• Exploreaza energia vibranta a faimosului Walking Street </p>
+                    <p>• Exploreaza energia vibranta a faimosului <b>Walking Street</b> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 2</h3>
-                    <p>• Descopera Maretia Sanctuary of Truth </p>
-                    <p>• Exploreaza stilul international la mall Terminal 21 Pattaya </p>
+                    <p>• Descopera Maretia <b>Sanctuary of Truth</b> </p>
+                    <p>• Exploreaza stilul international la mall <b>Terminal 21 Pattaya</b> </p>
                     <p>• Relaxare si revitalizare cu ajutorul masajului Thailanezesc </p>
                     <p>• Participa la spectacolul celebru <b>Tiffany Show</b> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 3</h3>
-                    <p>• Relaxeaza-te intr-un paradis tropical pe Koh Larn </p>
+                    <p>• Relaxeaza-te intr-un paradis tropical pe <b>Koh Larn</b> </p>
                     <p>• Incearca sporturi nautice </p>
                     <p>• Bucura-te de plaje cu nisip fin si ape cristaline </p>
                 </div>
@@ -278,8 +278,8 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• Viziteaza faimoasa statuie Big Buddha </p>
-                    <p>• Admira prietenii giganti la sanctuarul elefantilor </p>
+                    <p>• Viziteaza faimoasa statuie <b>Big Buddha</b> </p>
+                    <p>• Admira prietenii giganti la <b>sanctuarul elefantilor</b> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
@@ -294,14 +294,14 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 8</h3>
-                    <p>• Distreaza-te la Andaman Sea Water Park</p>
+                    <p>• Distreaza-te la <b>Andaman Sea Water Park</b> </p>
                     <p>• Savureaza cina in jungla inconjurat doar de natura. </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 9</h3>
-                    <p>• Viziteaza frumusetea oferita de insulele Phi Phi </p>
-                    <p>• Descopera uimitoarea Maya Bay</p>
-                    <p>• Admira Pi leh Lagoon</p>
+                    <p>• Viziteaza frumusetea oferita de insulele <b>Phi Phi</b> </p>
+                    <p>• Descopera uimitoarea <b>Maya Bay</b></p>
+                    <p>• Admira <b>Pi leh Lagoon</b></p>
                     <p>• Bucura-te de viata marina din apele cristaline cu ajutorul snorkelingului</p>
                 </div>
                 <div class="itinerary-card">
@@ -317,15 +317,15 @@
                 <div class="itinerary-card">
                     <h3>Ziua 12</h3>
                     <p>• Viziteaza cea mai mare piata plutitoare din Bangkok</p>
-                    <p>• Exploreaza si incearca Train Market </p>                   
-                    <p>• Incearca China Town pentru un street food delicios</p>
+                    <p>• Exploreaza si incearca <b>Train Market</b> </p>                   
+                    <p>• Incearca <b>China Town</b> pentru un street food delicios</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 14</h3>
                     <p>• Viziteaza templele Budiste uimitoare</p>
                     <p>• Exploreaza palatul regal </p>
                     <p>• Experimenteaza cel mai luxos mall</p>
-                    <p>• Bucura-te de o cina pe raul Chao Phraya </p>
+                    <p>• Bucura-te de o cina pe raul <b>Chao Phraya</b></p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 14</h3>
