--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -279,7 +279,7 @@
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
                     <p>• Viziteaza faimoasa statuie <b>Big Buddha</b> </p>
-                    <p>• Admira prietenii giganti la <b>sanctuarul elefantilor</b> </p>
+                    <p>• Admira prietenii giganti la sanctuarul elefantilor </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
@@ -301,7 +301,7 @@
                     <h3>Day 9</h3>
                     <p>• Viziteaza frumusetea oferita de insulele <b>Phi Phi</b> </p>
                     <p>• Descopera uimitoarea <b>Maya Bay</b></p>
-                    <p>• Admira <b>Pi leh Lagoon</b></p>
+                    <p>• Admira <b>Pi Leh Lagoon</b></p>
                     <p>• Bucura-te de viata marina din apele cristaline cu ajutorul snorkelingului</p>
                 </div>
                 <div class="itinerary-card">
