--- a/Booking.html
+++ b/Booking.html
@@ -202,7 +202,7 @@
 
     <div class="section">
         <h2>Rezerva acum</h2>
-    <form id="bookingForm" action="https://script.google.com/macros/s/AKfycbx_Vg3oVVlYADPfGNaB94HsSxdARSHUucN7fORajwv3VX-wigc7HaGD7nJrxgdbOAbc/exec" method="POST">
+    <form id="bookingForm" action="https://script.google.com/macros/s/AKfycbyiwTnXd84WqI4IhhTeKYjXOMCLitUGyLsOoD8xwhIE9ecUcZrm9Kaoln5xmn6SlA3K/exec" method="POST">
      <label for="name">Numele dvs.</label>
     <input type="text" id="name" name="name" required>
 
@@ -233,7 +233,7 @@
     <label for="guests">Număr de oaspeți</label>
     <input type="number" id="guests" name="guests" required>
     <label for="guests">Mesaj</label>
-    <textarea id="description" name="description" placeholder="Describe what you want from the holiday"></textarea>
+    <textarea id="description" name="description"></textarea>
     <label for="guests"></label>
     <button type="submit" class="cta-button">Trimite Rezervarea</button>
 </form>
