--- a/offers.html
+++ b/offers.html
@@ -208,7 +208,7 @@
             </div>
             <div class="offer">
                 <img src="https://images.pexels.com/photos/1647110/pexels-photo-1647110.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Adventure Tour">
-                <h3>Bangkok - Phuket - Phi Phi Islands (11 zile) </h3>
+                <h3>Pattaya - Phuket - Phi Phi - Bangkok (14 zile) </h3>
                 <p>Descoperă cultura si natura Thailandezeaca</p>
                 <a href="Vacanta1.html" class="cta-button">Detalii</a>
             </div>
