--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -227,24 +227,29 @@
             <div class="destinations">
                  <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731834993/iStock-689879464_nayo2f.jpg" alt="Bangkok Tour">
-                    <h3>Pattaya</h3>
+                    <h3>Bangkok</h3>
                     <p>Sedere 3 nopti </p>
                 </div>
                 <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
+                    <h3>Chiang Mai</h3>
+                    <p>Sedere 3 nopti </p>
+                </div>                 
+                <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
-                    <h3>Phuket Escape</h3>
-                    <p>Sedere 5 nopti </p>
+                    <h3>Krabi</h3>
+                    <p>Sedere 2 nopti </p>
                 </div>
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
                     <h3>Phi Phi Island</h3>
                     <p>Sedere 1 zi </p>
                 </div>
-                  <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
-                    <h3>Bangkok </h3>
+                <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
+                    <h3>Phuket </h3>
                     <p>Sedere 3 nopti </p>
-                </div> 
+                </div>            
             </div>
         </section>
 
@@ -252,85 +257,91 @@
             <h2>Itinerariu</h2>
             <p>Exploreaza Frumusetea Thailandei in 14 zile!</p>
             <div class="itinerary-cards">
-                <div class="itinerary-card">
+                 <div class="itinerary-card">
                     <h3>Ziua 1</h3>
-                    <p>• Relaxare la Hotel </p>
-                    <p>• Cina la Nest Bird cu vedere la plaja </p>
-                    <p>• Exploreaza energia vibranta a faimosului <b>Walking Street</b> </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 2</h3>
-                    <p>• Descopera Maretia <b>Sanctuary of Truth</b> </p>
-                    <p>• Exploreaza stilul international la mall <b>Terminal 21 Pattaya</b> </p>
-                    <p>• Relaxare si revitalizare cu ajutorul masajului Thailanezesc </p>
-                    <p>• Participa la spectacolul celebru <b>Tiffany Show</b> </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 3</h3>
-                    <p>• Relaxeaza-te intr-un paradis tropical pe <b>Koh Larn</b> </p>
-                    <p>• Incearca sporturi nautice </p>
-                    <p>• Bucura-te de plaje cu nisip fin si ape cristaline </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 4</h3>
-                    <p>• Sosire la Phuket </p>
-                    <p>• Exploreaza centrul vechi plin de culori </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 5</h3>
-                    <p>• Viziteaza faimoasa statuie <b>Big Buddha</b> </p>
-                    <p>• Admira prietenii giganti la sanctuarul elefantilor </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 6</h3>
-                    <p>• Relaxeaza-te pe plajele superbe din Phuket</p>
-                    <p>• Shopping la pietele locale sau la mallurile de lux </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 7</h3>
-                    <p>• Tur cu barca in insulele vecine orasului.</p>
-                    <p>• Snorkeling in apele cristaline </p>
-                    <p>• Bucura-te de apus si de un fire show pe plaja </p>                
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 8</h3>
-                    <p>• Distreaza-te la <b>Andaman Sea Water Park</b> </p>
-                    <p>• Savureaza cina in jungla inconjurat doar de natura. </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 9</h3>
-                    <p>• Viziteaza frumusetea oferita de insulele <b>Phi Phi</b> </p>
-                    <p>• Descopera uimitoarea <b>Maya Bay</b></p>
-                    <p>• Admira <b>Pi Leh Lagoon</b></p>
-                    <p>• Bucura-te de viata marina din apele cristaline cu ajutorul snorkelingului</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 10</h3>
-                    <p>• Cafe Phuket ofera mancare traditionala, case autentice si o ferma de lotus </p>
-                    <p>• Distreaza-te la un parc tematic </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 11</h3>
                     <p>• Descopera piete si magazine locale, si savureaza cina pe malul raului </p>                    
                     <p>• Exploreaza strazile pline de distractie ale Bangkokului </p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Ziua 12</h3>
+                    <h3>Ziua 2</h3>
                     <p>• Viziteaza cea mai mare piata plutitoare din Bangkok</p>
                     <p>• Exploreaza si incearca <b>Train Market</b> </p>                   
                     <p>• Incearca <b>China Town</b> pentru un street food delicios</p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Ziua 14</h3>
+                    <h3>Ziua 3</h3>
                     <p>• Viziteaza templele Budiste uimitoare</p>
                     <p>• Exploreaza palatul regal </p>
                     <p>• Experimenteaza cel mai luxos mall</p>
                     <p>• Bucura-te de o cina pe raul <b>Chao Phraya</b></p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Ziua 14</h3>
+                    <h3>Ziua 4</h3>
                     <p>• Shopping la un mall cu preturi uimitoare</p>
-                </div>            
+                </div>                            
+                <div class="itinerary-card">
+                    <h3>Ziua 5</h3>
+                    <p>•  </p>
+                    <p>•  </p>
+                    <p>• </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 6</h3>
+                    <p>•  </p>
+                    <p>•  </p>
+                    <p>• </p>
+                    <p>• </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 7</h3>
+                    <p>• </p>
+                    <p>• </p>
+                    <p>•  </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 8</h3>
+                    <p>• </p>
+                    <p>• </p>
+                    <p>•  </p>
+                </div>                
+                <div class="itinerary-card">
+                    <h3>Ziua 9</h3>
+                    <p>• Sosire la Phuket </p>
+                    <p>• Exploreaza centrul vechi plin de culori </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 10</h3>
+                    <p>• Viziteaza faimoasa statuie <b>Big Buddha</b> </p>
+                    <p>• Admira prietenii giganti la sanctuarul elefantilor </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 11</h3>
+                    <p>• Relaxeaza-te pe plajele superbe din Phuket</p>
+                    <p>• Shopping la pietele locale sau la mallurile de lux </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 12</h3>
+                    <p>• Tur cu barca in insulele vecine orasului.</p>
+                    <p>• Snorkeling in apele cristaline </p>
+                    <p>• Bucura-te de apus si de un fire show pe plaja </p>                
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 13</h3>
+                    <p>• Distreaza-te la <b>Andaman Sea Water Park</b> </p>
+                    <p>• Savureaza cina in jungla inconjurat doar de natura. </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Day 14</h3>
+                    <p>• Viziteaza frumusetea oferita de insulele <b>Phi Phi</b> </p>
+                    <p>• Descopera uimitoarea <b>Maya Bay</b></p>
+                    <p>• Admira <b>Pi Leh Lagoon</b></p>
+                    <p>• Bucura-te de viata marina din apele cristaline cu ajutorul snorkelingului</p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 15</h3>
+                    <p>• Cafe Phuket ofera mancare traditionala, case autentice si o ferma de lotus </p>
+                    <p>• Distreaza-te la un parc tematic </p>
+                </div>
             </div>
         </section>
         
