--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -281,22 +281,21 @@
                 </div>                            
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>•  </p>
+                    <p>•   </p>
                     <p>•  </p>
                     <p>• </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
-                    <p>•  </p>
-                    <p>•  </p>
-                    <p>• </p>
-                    <p>• </p>
+                    <p>• Explore <b>Doi Suthep</b> Spiritual and Natural Beauty</p>
+                    <p>• Shop and Explore Central Chiang Mai Best Malls</p>
+                    <p>• Historic Gate and Gateway to the Best <b>Local Markets</b></p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
-                    <p>• </p>
-                    <p>• </p>
-                    <p>•  </p>
+                    <p>• <b>Bamboo Rafting</b> in Chiang Mai </p>
+                    <p>• Connect with Thailand <b>Elephant Sanctuary</b></p>
+                    <p>• Climb Grippy Limestone Waterfalls at <b>Sticky Waterfall</b></p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 8</h3>
