--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -226,22 +226,22 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                  <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731834993/iStock-689879464_nayo2f.jpg" alt="Bangkok Tour">
+                    <img src="https://media.istockphoto.com/id/1909090305/th/รูปถ่าย/bangkok-thailand.jpg?s=1024x1024&w=is&k=20&c=Jfmy9_zILaj5lk9sBCNOQQzg--X8OVziYs6nFYsxRtI=" alt="Bangkok Tour">
                     <h3>Bangkok</h3>
                     <p>Sedere 3 nopti </p>
                 </div>
                 <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
+                    <img src="https://media.istockphoto.com/id/183344509/th/รูปถ่าย/พระภิกษุสงฆ์และรถตุ๊กตุ๊กในจังหวัดเชียงใหม่.jpg?s=1024x1024&w=is&k=20&c=iZrHvWZ5GRDC4QIMuj43-153gmPANOo5OodgE4UnFRU="Bangkok Tour">
                     <h3>Chiang Mai</h3>
                     <p>Sedere 3 nopti </p>
                 </div>                 
                 <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
+                    <img src="https://media.istockphoto.com/id/1473165467/th/รูปถ่าย/มุมมองทางอากาศแบบพาโนรามาของหาดไร่เลย์ที่สวยงามกระบี่.jpg?s=1024x1024&w=is&k=20&c=Y6CiZPXfY7DjKIQy8yZigT48vugzilsCBrQqIF5KVl0=" alt="Phuket Getaway">
                     <h3>Krabi</h3>
                     <p>Sedere 2 nopti </p>
                 </div>
                 <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
+                    <img src="https://media.istockphoto.com/id/1462519363/th/รูปถ่าย/มุมมองทางอากาศของหาดมาหยาที่มีชื่อเสียงเกาะพีพี.jpg?s=1024x1024&w=is&k=20&c=o34yx8acGmFeDvdZ3dVozOd6NX6sYa6huZdUOBpXeHk=" alt="Phi Phi Islands">
                     <h3>Phi Phi Island</h3>
                     <p>Sedere 1 zi </p>
                 </div>
