--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -231,17 +231,17 @@
                     <p>Sedere 3 nopti </p>
                 </div>
                 <div class="destination">
-                    <img src="https://media.istockphoto.com/id/183344509/th/รูปถ่าย/พระภิกษุสงฆ์และรถตุ๊กตุ๊กในจังหวัดเชียงใหม่.jpg?s=1024x1024&w=is&k=20&c=iZrHvWZ5GRDC4QIMuj43-153gmPANOo5OodgE4UnFRU="Bangkok Tour">
+                    <img src="https://media.istockphoto.com/id/1071786704/photo/wat-phra-sing-in-chiang-mai-thailand.jpg?s=1024x1024&w=is&k=20&c=cpDWs2ekLeVwjaAdrja_UWSECU_RoIfrC-MZRn6SkDw="Bangkok Tour">
                     <h3>Chiang Mai</h3>
                     <p>Sedere 3 nopti </p>
                 </div>                 
                 <div class="destination">
-                    <img src="https://media.istockphoto.com/id/1473165467/th/รูปถ่าย/มุมมองทางอากาศแบบพาโนรามาของหาดไร่เลย์ที่สวยงามกระบี่.jpg?s=1024x1024&w=is&k=20&c=Y6CiZPXfY7DjKIQy8yZigT48vugzilsCBrQqIF5KVl0=" alt="Phuket Getaway">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929999/iStock-1473165467_tjjfil.jpg"Phuket Getaway">
                     <h3>Krabi</h3>
                     <p>Sedere 2 nopti </p>
                 </div>
                 <div class="destination">
-                    <img src="https://media.istockphoto.com/id/1462519363/th/รูปถ่าย/มุมมองทางอากาศของหาดมาหยาที่มีชื่อเสียงเกาะพีพี.jpg?s=1024x1024&w=is&k=20&c=o34yx8acGmFeDvdZ3dVozOd6NX6sYa6huZdUOBpXeHk=" alt="Phi Phi Islands">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929849/iStock-1462519363_wxoxd7.jpg"Phi Phi Islands">
                     <h3>Phi Phi Island</h3>
                     <p>Sedere 1 zi </p>
                 </div>
