--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -226,12 +226,12 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                  <div class="destination">
-                    <img src="https://media.istockphoto.com/id/1909090305/th/รูปถ่าย/bangkok-thailand.jpg?s=1024x1024&w=is&k=20&c=Jfmy9_zILaj5lk9sBCNOQQzg--X8OVziYs6nFYsxRtI=" alt="Bangkok Tour">
+                    <img src="https://media.istockphoto.com/id/943535718/photo/damnoen-saduak-floating-market-thaïland.jpg?s=1024x1024&w=is&k=20&c=_gRBRSLqsDRH_WSMrtKJrihdDio0c8UTKQNXGNCgp0w="Bangkok Tour">
                     <h3>Bangkok</h3>
                     <p>Sedere 3 nopti </p>
                 </div>
                 <div class="destination">
-                    <img src="https://media.istockphoto.com/id/1071786704/photo/wat-phra-sing-in-chiang-mai-thailand.jpg?s=1024x1024&w=is&k=20&c=cpDWs2ekLeVwjaAdrja_UWSECU_RoIfrC-MZRn6SkDw="Bangkok Tour">
+                    <img src="https://media.istockphoto.com/id/1204644125/photo/wat-phra-that-doi-suthep-with-sun-rising-in-the-morning-the-most-famous-temple-in-chiang-mai.jpg?s=1024x1024&w=is&k=20&c=bnaF3Q6metQfSfFaHdWy5dKfj7DI8D6kVaWPj-SQYsM="Bangkok Tour">
                     <h3>Chiang Mai</h3>
                     <p>Sedere 3 nopti </p>
                 </div>                 
@@ -246,7 +246,7 @@
                     <p>Sedere 1 zi </p>
                 </div>
                 <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phi Phi Islands">
                     <h3>Phuket </h3>
                     <p>Sedere 3 nopti </p>
                 </div>            
