--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -226,7 +226,7 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                  <div class="destination">
-                    <img src="https://media.istockphoto.com/id/871569534/photo/aerial-view-of-bangkok-modern-office-buildings.jpg?s=2048x2048&w=is&k=20&c=ArTodJ8VV-obofL9ol_MsXsqmGSf94ahb1H81YR9MPY="Bangkok Tour">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731932208/iStock-871569534_chti1w.jpg"Bangkok Tour">
                     <h3>Bangkok</h3>
                     <p>Sedere 3 nopti </p>
                 </div>
