--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -231,7 +231,7 @@
                     <p>Sedere 3 nopti </p>
                 </div>
                 <div class="destination">
-                    <img src="https://media.istockphoto.com/id/1971310122/photo/phra-that-doi-suthep-temple-is-buddhist-temple-in-chiang-mai-thailand.jpg?s=2048x2048&w=is&k=20&c=uokE8PCZL---0_oOY7JOhb7b25IseCAUBmpK2yYQ6xM="Bangkok Tour">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731946349/iStock-2148664608-2_xir3ay.jpg"Bangkok Tour">
                     <h3>Chiang Mai</h3>
                     <p>Sedere 3 nopti </p>
                 </div>                 
