--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -281,15 +281,17 @@
                 </div>                            
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>•   </p>
                     <p>•  </p>
-                    <p>• </p>
+                    <p>•  </p>
+                    <p>• Historic Gate and Gateway to the Best <b>Local Markets</b></p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
                     <p>• Explore <b>Doi Suthep</b> Spiritual and Natural Beauty</p>
+                    <p>• Unique glimpse into the traditional lifestyle of the <b>Hmong people</b></p>
+                    <p>• Come Taste the Authentic <b>Khao Soi</b> of Chiang Mai</p>
                     <p>• Shop and Explore Central Chiang Mai Best Malls</p>
-                    <p>• Historic Gate and Gateway to the Best <b>Local Markets</b></p>
+                    
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
