--- a/honeymoon.html
+++ b/honeymoon.html
@@ -292,13 +292,13 @@
     </header>
     <div class="menu-overlay" id="menuOverlay">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="destinations.html">Destinations</a>
-            <a href="about.html">About Us</a>
+            <a href="index.html">Acasa</a>
+            <a href="destinations.html">Destinatii</a>
+            <a href="offers.html">Oferte</a>
             <a href="Services.html">Services</a>
             <a href="contact.html">Contact</a>
             <a href="Booking.html">Rezerva acum</a>
-            <a href="Offers.html">Oferte</a>
+            <a href="about.html">Despre noi</a>
         </nav>
     </div>
 
@@ -312,32 +312,32 @@
             <h2>De ce sa iti petreci luna de miere in Thailanda?</h2>
             <div class="destinations">
                 <div class="destination">
-                    <h3>Stunning Beaches</h3>
-                    <p>Beautiful sunsets and enchanting islands.</p>
+                    <h3>Plaje idilice</h3>
+                    <p>Nisip fin si cele mai cristaline ape!</p>
                 </div>
                 <div class="destination">
-                    <h3>Cultural Richness</h3>
-                    <p>Rich traditions and ancient temples.</p>
+                    <h3>Cultura si spiritualitate</h3>
+                    <p>Cultura bogata si profunda.</p>
                 </div>
                 <div class="destination">
-                    <h3>Exquisite Cuisine</h3>
-                    <p>Indulge in vibrant Thai delicacies.</p>
+                    <h3>Mancare deliciaosa</h3>
+                    <p>Bucataria thailandeza este faimoasa si apreciata in intreaga lume.</p>
                 </div>
                 <div class="destination">
-                    <h3>Luxurious Accommodations</h3>
-                    <p>Romantic resorts tailored for relaxation.</p>
+                    <h3>Cazari de lux</h3>
+                    <p>Experiente de lux la preturi accesibile.</p>
                 </div>
                 <div class="destination">
-                    <h3>Unique Experiences</h3>
-                    <p>Cooking classes and elephant sanctuaries.</p>
+                    <h3>Experiente unice</h3>
+                    <p>O combinatie intre relaxare, aventura, romantism si amintiri de neuitat.</p>
                 </div>
                 <div class="destination">
-                    <h3>Vibrant Nightlife</h3>
-                    <p>Lively bars and clubs in Bangkok.</p>
+                    <h3>Viata de noapte</h3>
+                    <p>Petrecerile pe plaja, sau pe roof top aduc distractia la nivel inalt.</p>
                 </div>
                 <div class="destination">
-                    <h3>Affordability</h3>
-                    <p>Luxury at a fraction of the cost.</p>
+                    <h3>Preturi accesibile</h3>
+                    <p>Atat cazarile, cat si mancarea au preturi foarte bune pentru o locatie exotica</p>
                 </div>
             </div>
         </section>
