--- a/index.html
+++ b/index.html
@@ -395,15 +395,15 @@
         <div class="gallery-container">
             <div class="gallery active">
                 <img src="https://cdn.pixabay.com/photo/2020/02/16/07/55/beach-4852830_1280.jpg" alt="Gallery Image 1">
-                <h3>Plaje speciale</h3>
+                <h3>Plaje idilice</h3>
             </div>
             <div class="gallery">
                 <img src="https://cdn.pixabay.com/photo/2016/02/11/13/47/wat-phra-that-choeng-chum-1193569_1280.jpg" alt="Gallery Image 2">
-                <h3>Temple deosebite</h3>
+                <h3>Temple istorice</h3>
             </div>
             <div class="gallery">
                 <img src="https://cdn.pixabay.com/photo/2015/10/15/15/41/lishui-989526_1280.jpg" alt="Gallery Image 3">
-                <h3>Festivale locale</h3>
+                <h3>Songkran festival</h3>
             </div>
             <button class="prev" onclick="showGallery(-1)">❮</button>
             <button class="next" onclick="showGallery(1)">❯</button>
@@ -415,7 +415,7 @@
         <div class="testimonial-container">
             <div class="testimonial active">
                 <p>
-                    <img src="" alt="Francisca Filip" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;"> 
+                    <img src="https://i.imgur.com/6ePuO5J.png" alt="Francisca Filip" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;"> 
                     "Cea mai frumoasa vacanta. Totul a fost bine planuit si experienta a fost de neuitat. Abia astept sa revin" 
                     <br>- Francisca Filip.
                 </p>
@@ -430,7 +430,7 @@
             <div class="testimonial">
                 <p>
                     <img src="https://i.imgur.com/8hjiNS2.jpeg" alt="Denis" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;"> 
-                    "Super vacanta! Am incercat atat cultura Thailandezeasca cat si distractia oferita de Bangkok. Serviciile au fost nemaipomenita. Recomand Trasia !!" 
+                    "Super vacanta! Am incercat atat cultura Thailandezeasca cat si distractia oferita de Bangkok. Serviciile au fost super. Recomand Trasia !!" 
                     <br>- Andrei A.
                 </p>
             </div>
