--- a/index.html
+++ b/index.html
@@ -415,9 +415,9 @@
         <div class="testimonial-container">
             <div class="testimonial active">
                 <p>
-                    <img src="https://i.imgur.com/6ePuO5J.png" alt="Francisca Filip" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;"> 
+                    <img src="https://imgur.com/a/i441mYQ?s=wa" alt="Francisca Filip" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;"> 
                     "Cea mai frumoasa vacanta. Totul a fost bine planuit si experienta a fost de neuitat. Abia astept sa revin" 
-                    <br>- Francisca Filip.
+                    <br>- Francisca F.
                 </p>
             </div>
             <div class="testimonial">
