--- a/krabi.html
+++ b/krabi.html
@@ -221,7 +221,7 @@
             <div class="activity-container">
                 <div class="activity active">
                     <img src="https://cdn.pixabay.com/photo/2015/06/27/19/39/parasailing-823771_1280.jpg" alt="Beach Activities">
-                    <h3>Activitati pe plaja</h3>
+                    <h3>Sporturi nautice</h3>
                 </div>
                 <div class="activity">
                     <img src="https://cdn.pixabay.com/photo/2019/03/01/21/31/thailand-4028725_1280.jpg" alt="Elephant Riding">
