--- a/Khaosok.html
+++ b/Khaosok.html
@@ -221,20 +221,16 @@
             <h2 class="header">Activitati populare</h2>
             <div class="activity-container">
                 <div class="activity active">
-                    <img src="https://images.unsplash.com/photo-1639887957004-955085959ce9?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Beach Activities">
-                    <h3>Dinner cruise</h3>
+                    <img src="https://cdn.pixabay.com/photo/2017/05/31/18/23/dam-2361169_1280.jpg" alt="Beach Activities">
+                    <h3>Cheow Lan Lake</h3>
                 </div>
                 <div class="activity">
-                    <img src="https://images.unsplash.com/photo-1694824995159-2093477bc337?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHdhdCUyMGFydW58ZW58MHx8MHx8fDA%3D" alt="Elephant Riding">
-                    <h3>Vizitarea templelor</h3>
+                    <img src="https://cdn.pixabay.com/photo/2017/07/01/10/44/khao-sok-national-park-2461177_1280.jpg" alt="Elephant Riding">
+                    <h3>Khao sok National Park</h3>
                 </div>
                 <div class="activity">
-                    <img src="https://images.unsplash.com/photo-1696350734699-f5c0a8f48435?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8bW9ua2V5JTIwdGhhaWxhbmR8ZW58MHx8MHx8fDA%3D" alt="Food Tours">
-                    <h3>Safari zoo</h3>
-                </div>
-                <div class="activity">
-                    <img src="https://images.unsplash.com/photo-1694676319276-3731a7320ecd?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Food Tours">
-                    <h3>Shopping</h3>
+                    <img src="https://images.pexels.com/photos/8258340/pexels-photo-8258340.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Food Tours">
+                    <h3>Night Safari</h3>
                 </div>
                 <button class="arrow prev" onclick="showActivity(-1)">❮</button>
                 <button class="arrow next" onclick="showActivity(1)">❯</button>
@@ -250,16 +246,7 @@
                 <img src="https://images.unsplash.com/photo-1641892115365-559fc6b792bd?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Attraction 2" onclick="openModal(this.src)">
             </div>
             <div class="slide">
-                <img src="https://plus.unsplash.com/premium_photo-1682098240884-9dfc7bf048f0?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmFuZ2tva3xlbnwwfHwwfHx8MA%3D%3D" alt="Attraction 3" onclick="openModal(this.src)">
-            </div>
-            <div class="slide">
-                <img src="https://images.unsplash.com/photo-1669790560369-f6f15f5bb2b6?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGJhbmdrb2t8ZW58MHx8MHx8fDA%3D" alt="Attraction 4" onclick="openModal(this.src)">
-            </div>
-            <div class="slide">
-                <img src="https://images.unsplash.com/photo-1510379872535-9310dc6fd6a7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Attraction 5" onclick="openModal(this.src)">
-            </div>
-            <div class="slide">
-                <img src="https://images.unsplash.com/photo-1672934324710-21e765dec574?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Attraction 6" onclick="openModal(this.src)">
+                <img src="https://cdn.pixabay.com/photo/2016/10/15/14/10/thailand-1742563_960_720.jpg" alt="Attraction 3" onclick="openModal(this.src)">
             </div>
         </div>
     </div>
