--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -281,9 +281,10 @@
                 </div>                            
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>•  </p>
-                    <p>•  </p>
-                    <p>• Historic Gate and Gateway to the Best <b>Local Markets</b></p>
+                    <p>• The Monastery of the Lion Buddha</p>
+                    <p>• Chiang Mai Heritage at the City Arts & Cultural Museum</p>
+                    <p>• A Garden of Tranquility and Royal Heritage</p>
+                    <p>• Experience a Unique and Immersive Wildlife Adventure After Dark</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
@@ -303,7 +304,7 @@
                     <h3>Ziua 8</h3>
                     <p>• </p>
                     <p>• </p>
-                    <p>•  </p>
+                    <p>• Historic Gate and Gateway to the Best <b>Local Markets</b></p>
                 </div>                
                 <div class="itinerary-card">
                     <h3>Ziua 9</h3>
